--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MySGE">
-        <activity android:name=".KardexActivity"></activity>
+        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".KardexActivity" />
         <activity
             android:name=".Sesion"
             android:label="@string/title_activity_sesion"
