--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MySGE">
-        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".ScheduleActivity"></activity>
+        <activity android:name=".AcademicAdvanceActivity" />
+        <activity android:name=".RegisterActivity" />
         <activity android:name=".KardexActivity" />
         <activity
             android:name=".Sesion"
