--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MySGE">
-        <activity android:name=".MenuActivity"></activity>
+        <activity android:name=".InscripcionActivity"></activity>
+        <activity android:name=".MenuActivity" />
         <activity android:name=".ScheduleActivity" />
         <activity android:name=".AcademicAdvanceActivity" />
         <activity android:name=".RegisterActivity" />
