Refactor de IDs, row_inscripcion.xml y actualizacion del MainFest.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         <activity android:name=".RegisterActivity" />
         <activity android:name=".KardexActivity" />
        <activity android:name=".MenuActivity" />
+        <activity android:name=".InscripcionActivity"/>
         <activity android:name=".MainActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
