--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MySGE">
-        <activity android:name=".ScheduleActivity"></activity>
+        <activity android:name=".DatosActivity"></activity>
+        <activity android:name=".ScheduleActivity" />
         <activity android:name=".AcademicAdvanceActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".KardexActivity" />
-       <activity android:name=".MenuActivity" />
-        <activity android:name=".InscripcionActivity"/>
+        <activity android:name=".MenuActivity" />
+        <activity android:name=".InscripcionActivity" />
         <activity android:name=".MainActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
